--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#581c87" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Educational Investment Brief Builder - Explore investment screening approaches with Ethical Capital" />
     <title>Dryvest - Divestment Brief Builder | Ethical Capital</title>
