Align UI with Ethical Capital branding and add vitest coverage

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,12 @@
     <title>Dryvest — Briefing Builder</title>
     <meta name="color-scheme" content="dark light" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&family=Raleway:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
